--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,4 +5,9 @@
 body {
   background-color: #000;
   color: #e2e8f0;
+  height: 100%;
+}
+
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
 }
